--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
               <h1 class="header-inner__title">
                 You don’t have to <span class="box">Fight them Alone.</span>
               </h1>
-              <p class="header-inner__text">
+              <div class="header-inner__text">
                 Lorem ipsum dolor sit amet consectetur adipiscing elit blandit,
                 curabitur sodales conubia ut inceptos faucibus himenaeos tortor
                 eget, hac massa gravida arcu interdum proin curae.
-              </p>
+              </div>
               <form action="submit" class="header-form">
                 <label>
                   <svg
